Playing a bit with cleaning things up on mobile?

--- a/index.html
+++ b/index.html
@@ -4,23 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Up Ahead</title>
-    <meta name="description" content="Up Ahead is a joyful countdown app."/>
+    <meta name="description" content="Up Ahead is a happy little countdown app."/>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
-
-    <!-- <meta property="og:title" content="Fruit"/>
-    <meta property="og:description" content="Fruit makes software experiments named after fruits."/>
-    <meta property="og:image" content="https://madebyfruit.com/assets/images/og.png"/>
-    <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:title" content="Fruit"/>
-    <meta name="twitter:description" content="Fruit makes software experiments named after fruits."/>
-    <meta name="twitter:image" content="https://madebyfruit.com/assets/images/og.png"/> -->
 </head>
 
 <body>
     <div id="stack">
-        <h2>Up Ahead</h2>
-        <h3>A happy little countdown app.</h3>
+        <!-- <h2>Up Ahead</h2> -->
+        <p><b class="emphasized">Up Ahead</b> is a happy little countdown app.</p>
         <img src="event.png" alt="Early preview build launching soon" width=400>
         <div id="long-segment"></div>
         <div id="short-segment"></div>
