--- a/index.html
+++ b/index.html
@@ -6,19 +6,32 @@
     <title>Up Ahead</title>
     <meta name="description" content="Up Ahead is a happy little countdown app."/>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="icon" type="image/png" href="assets/images/favicon.png">
+    <link rel="icon" type="image/png" href="favicon.png">
+
+    <meta property="og:title" content="Up Ahead"/>
+    <meta property="og:description" content="A happy little countdown app."/>
+    <meta property="og:image" content="https://upaheadapp.com/og.png"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:title" content="Up Ahead"/>
+    <meta name="twitter:description" content="A happy little countdown app."/>
+    <meta name="twitter:image" content="https://upaheadapp.com/og.png"/>
 </head>
 
 <body>
     <div id="stack">
-        <!-- <h2>Up Ahead</h2> -->
-        <p><b class="emphasized">Up Ahead</b> is a happy little countdown app.</p>
-        <img src="event.png" alt="Early preview build launching soon" width=400>
+        <img id="icon" src="upahead.png" alt="Binoculars icon" width=120>
+        <p>Hi! A happy little<br/>countdown app lives here.<br/><br/>It's called <b>Up Ahead</b>.</p>
+        <img id="event" src="event.png" alt="Early preview build launching soon" width=400>
         <div id="long-segment"></div>
         <div id="short-segment"></div>
         <div id="long-segment"></div>
-        <a href="https://twitter.com/theupaheadapp" class="button">Follow along</a>
+        <a id="stay-tuned-button" href="https://twitter.com/theupaheadapp" class="button">Stay tuned</a>
     </div>
+
+
+
+
+    
 </body>
 
 </html>
