--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="stack">
         <img id="icon" src="assets/upahead.png" alt="Binoculars icon" width=120>
         <p>Hi! A happy little<br/>countdown app lives here.<br/><br/>It's called <b>Up Ahead</b>.</p>
-        <img id="event" src="assets/event.png" alt="Early preview build launching soon" width=400>
+        <img id="event" src="assets/event2.png" alt="Version 1.0 launching soon" width=400>
         <div id="long-segment"></div>
         <div id="short-segment"></div>
         <div id="long-segment"></div>
