Minor updates to copy and responsiveness.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <div id="stack">
         <img id="icon" src="assets/upahead.png" alt="Binoculars icon" width=120>
-        <p>Hi! A happy little<br/>countdown app lives here.<br/><br/>It's called <b>Up Ahead</b>.</p>
+        <p>Hello!<br/><br/><b>Up Ahead</b> is a countdown app for people who like nice things.</p>
         <img id="event" src="assets/event2.png" alt="Version 1.0 launching soon" width=400>
         <div id="long-segment"></div>
         <div id="short-segment"></div>
