--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Up Ahead is a countdown app for people who like nice things."/>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/png" href="assets/favicon.png">
+    <link rel="preconnect" href="https://fonts.gstatic.com/"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500;700&display=block" rel="stylesheet">
 
     <meta property="og:title" content="Up Ahead"/>
     <meta property="og:description" content="A countdown app for people who like nice things."/>
