Add click to cycle through color palette.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Up Ahead</title>
+    <title>Up Ahead | A Countdown App for iOS</title>
     <meta name="description" content="Up Ahead is a countdown app for people who like nice things."/>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/png" href="assets/favicon.png">
