Add privacy policy.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body id="background">
     <div id="stack">
         <img id="icon" src="assets/upahead_aqua.png" alt="Binoculars icon" width=120>
-        <p>Hello!<br/><br/><b>Up Ahead</b> is a countdown app for people who like nice things.</p>
+        <p id="stackText">Hello!<br/><br/><b>Up Ahead</b> is a countdown app for people who like nice things.</p>
         <img id="event" src="assets/event_aqua.png" alt="Version 1.0 launching soon" width=400>
         <div id="timeline">
             <div id="long-segment"></div>
