--- a/index.html
+++ b/index.html
@@ -25,14 +25,24 @@
 <body id="background">
     <div id="stack">
         <img id="icon" src="assets/upahead_aqua.png" alt="Binoculars icon" width=120>
-        <p id="stackText">Hello!<br/><br/><b>Up Ahead</b> is a countdown app for people who like nice things.</p>
+        <p class="stackText">Hello!<br/><br/><b>Up Ahead</b> is a countdown app for people who like nice things.</p>
         <img id="event" src="assets/event_aqua.png" alt="Version 1.0 launching soon" width=400>
+        <!-- <div id="timeline">
+            <div id="long-segment"></div>
+        </div> -->
         <div id="timeline">
             <div id="long-segment"></div>
             <div id="short-segment"></div>
             <div id="long-segment"></div>
         </div>
         <a id="stayTuned" href="https://twitter.com/theupaheadapp" class="button">Stay tuned</a>
+        <!-- <div id="timeline">
+            <div id="long-segment"></div>
+            <div id="short-segment"></div>
+            <div id="long-segment"></div>
+        </div>
+        <a id="getNotified" href="https://twitter.com/theupaheadapp" class="button">Get notified</a>
+        <p id="note" class="stackText">(I'll send you exactly one email when the app launches, and then delete your address from my records forever.)</p> -->
     </div>    
 </body>
 
