Include official launch day and pre-order link.

--- a/index.html
+++ b/index.html
@@ -36,13 +36,12 @@
             <div id="long-segment"></div>
         </div>
         <a id="stayTuned" href="https://twitter.com/theupaheadapp" class="button">Stay tuned</a>
-        <!-- <div id="timeline">
+        <div id="timeline">
             <div id="long-segment"></div>
             <div id="short-segment"></div>
             <div id="long-segment"></div>
         </div>
-        <a id="getNotified" href="https://twitter.com/theupaheadapp" class="button">Get notified</a>
-        <p id="note" class="stackText">(I'll send you exactly one email when the app launches, and then delete your address from my records forever.)</p> -->
+        <a id="bottomButton" href="https://apps.apple.com/us/app/up-ahead-countdown-widgets/id1583147528" class="button">Pre-order</a>
     </div>    
 </body>
 
