Update privacy policy to include language about aggregate analytics.

--- a/privacy.html
+++ b/privacy.html
@@ -16,17 +16,21 @@
         <br/>
         <h2>Our stance on privacy</h2>
         <br/>
-        <p>We strongly believe that your data belongs to you. We do not collect any identifiable information about our users; we only track the bare minimum needed to debug issues and to view download and purchase trends.</p>
+        <p>We strongly believe that your data belongs to you. We do not collect any identifiable information about our users; we only track the bare minimum needed to debug issues, to view download and purchase trends, and to figure out what to work on next.</p>
         <br/>
         <h2>What information does Up Ahead collect?</h2>
         <br/>
-        <p>Up Ahead collects anonymized metadata using Apple’s built in metrics system. This system sends data such as session length, crash reports, device type, and locale. In addition, RevenueCat is used for anonymized purchase tracking. This means that when someone makes a purchase in the app, we see that a purchase was made at a particular time in a particular country; no other data is collected, and so this purchase data cannot be linked to a user’s identity. More information on RevenueCat’s privacy policy can be found <a href="https://www.revenuecat.com/privacy/">here</a>.</p>
+        <p>Up Ahead collects anonymized metadata using Apple’s built in metrics system. This system sends data such as session length, crash reports, device type, and locale.</p>
+        <br/>
+        <p>In addition, RevenueCat is used for anonymized purchase tracking. This means that when someone makes a purchase in the app, we see that a purchase was made at a particular time in a particular country; no other data is collected, and so this purchase data cannot be linked to a user’s identity. More information on RevenueCat’s privacy policy can be found <a href="https://www.revenuecat.com/privacy/">here</a>.</p>
+        <br/>
+        <p>Finally, Up Ahead collects some simple, aggregate, anonymous statistics about the usage of certain key features within the app — namely, statistics on which patterns are being unlocked most frequently, and which category icons are being used most frequently.</p>
         <br/>
         <p>No other information is collected at any time. Any data you enter into Up Ahead resides strictly on your device and in your personal iCloud account. We have no means of viewing any user-entered data. </p>
         <br/>
         <h2>What does Up Ahead do with this data?</h2>
         <br/>
-        <p>Anonymized crash reports and device info are used to fix crashes within the app. Your anonymized device data may also be used to prioritize support for translating to certain languages. Total download count and other aggregated metrics may be used for marketing purposes.</p>
+        <p>Anonymized crash reports and device info are used to fix crashes within the app. Your anonymized device data may also be used to prioritize support for translating to certain languages. Total download count and other aggregated metrics may be used for marketing purposes, or for making decisions about features to add or improve.</p>
         <br/>
         <h2>Sharing information</h2>
         <br/>
@@ -40,7 +44,7 @@
         <br/>
         <p>Changes to this privacy policy may periodically be made and posted here. Visit this page at any time to check for updates.</p>
         <br/>
-        <p>Last updated: August 20, 2022</p>
+        <p>Last updated: September 27, 2022</p>
         <br/>
         <h2>Questions?</h2>
         <br/>
