--- a/index.html
+++ b/index.html
@@ -23,25 +23,23 @@
 </head>
 
 <body id="background">
+    <a id="presskitButton" href="https://upaheadapp.com/assets/presskit.zip" class="menubutton">Press Kit</a>
     <div id="stack">
         <img id="icon" src="assets/upahead_aqua.png" alt="Binoculars icon" width=120>
         <p class="stackText">Hello!<br/><br/><b>Up Ahead</b> is a countdown app for people who like nice things.</p>
         <img id="event" src="assets/event_aqua.png" alt="Version 1.0 launching soon" width=400>
-        <!-- <div id="timeline">
-            <div id="long-segment"></div>
-        </div> -->
         <div id="timeline">
             <div id="long-segment"></div>
             <div id="short-segment"></div>
             <div id="long-segment"></div>
         </div>
-        <a id="stayTuned" href="https://twitter.com/theupaheadapp" class="button">Stay tuned</a>
+        <a id="stayTuned" href="https://apps.apple.com/us/app/up-ahead-countdown-widgets/id1583147528https://twitter.com/theupaheadapp" class="button">Download now</a>
         <div id="timeline">
             <div id="long-segment"></div>
             <div id="short-segment"></div>
             <div id="long-segment"></div>
         </div>
-        <a id="bottomButton" href="https://apps.apple.com/us/app/up-ahead-countdown-widgets/id1583147528" class="button">Pre-order</a>
+        <a id="bottomButton" href="https://twitter.com/theupaheadapp" class="button">Stay tuned</a>
     </div>    
 </body>
 
