Fix app download link.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div id="short-segment"></div>
             <div id="long-segment"></div>
         </div>
-        <a id="stayTuned" href="https://apps.apple.com/us/app/up-ahead-countdown-widgets/id1583147528https://twitter.com/theupaheadapp" class="button">Download now</a>
+        <a id="stayTuned" href="https://apps.apple.com/us/app/up-ahead-countdown-widgets/id1583147528" class="button">Download now</a>
         <div id="timeline">
             <div id="long-segment"></div>
             <div id="short-segment"></div>
